--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     background-color: rgb(252, 252, 252);
   }
 
+.bg-232a84 {
+  background-color: #232a84;
+} 
+
+
 /*Timeline*/
 .timeline {
     position: relative;
@@ -25,6 +30,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 5px;
   }
 
   .timeline a:nth-child(even) {
