--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,10 @@
     box-shadow: 0 4px 6px #5a5ada36 , 0 6px 10px rgba(89, 89, 220, 0.173);
   }
 
+  /*bloco da discordia*/
+  .bloq{
+    display:hidden;
+  }
   
   
   
